<resources>
    <!--Versiones del sistema-->
    <string name="num_version_app">0.0.0.1</string>
    <string name="num_version_db">0.0.0.1</string>

    <string name="app_name">ikqss movil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="header_menu">Nombre del proyecto</string>

    <!--Opciones para el menu-->
    <string name="action_settings">Settings</string>
    <string name="reasignarPersonal">Reasignaciones(Mobiles)</string>
    <string name="envios">Envios</string>
    <string name="notas">Notas</string>
    <string name="reportes">Reportes</string>
    <string name="configuracion">Configuración</string>
    <string name="memoria">Memoria SD</string>
    <string name="sistema">Sistema</string>
    <string name="wifi">Wifi</string>
    <string name="apagar">Apagar</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="archivos">Archivos</string>
    <string name="descargas">Descargas</string>
    <string name="levantamiento">Levantamiento</string>
    <string name="reasignacion">Reasignación</string>
    <string name="email">soporte.ikqss@inegi.org.mx</string>
    <string name="title_activity_descargas1">Descargas1</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_plantilla">Plantilla</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="format">Formatear SD</string>
    <string name="exportar">Exportar</string>
    <string name="restauracion">Restauración</string>
    <string name="respaldo">Respaldo</string>
    <string name="documentacion">Documentación</string>

</resources>
