<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/envios"
            android:icon="@mipmap/ic_envio"
            android:title="@string/envios" />
        <item
            android:id="@+id/descargas"
            android:icon="@mipmap/ic_descarga"
            android:title="@string/descargas" />
        <item
            android:id="@+id/levantamiento"
            android:icon="@drawable/ic_question_answer_black"
            android:title="@string/levantamiento" />
        <item
            android:id="@+id/reasignacion"
            android:icon="@drawable/ic_screen_share_black"
            android:title="@string/reasignacion" />
    </group>
    <item android:title="@string/seguimiento">
        <menu>
            <item
                android:id="@+id/notas"
                android:icon="@drawable/ic_menu_noteblack"
                android:title="@string/notas" />
        </menu>
    </item>
    <item android:title="@string/archivos">
        <menu>
            <item
                android:id="@+id/reportes"
                android:icon="@drawable/ic_insert_drive_file_black"
                android:title="@string/reportes" />
            <item
                android:id="@+id/documentacion"
                android:icon="@drawable/ic_picture_as_pdf_black"
                android:title="@string/documentacion" />
        </menu>
    </item>

    <item android:title="@string/configuracion">
        <menu>
            <item
                android:id="@+id/respaldo"
                android:icon="@drawable/ic_archive_black"
                android:title="@string/respaldo" />
            <item
                android:id="@+id/restauracion"
                android:icon="@drawable/ic_restore_black"
                android:title="@string/restauracion" />
            <item
                android:id="@+id/exportar"
                android:icon="@drawable/ic_sd_storage_black"
                android:title="@string/exportar" />

        </menu>
    </item>
    <item android:title="@string/memoria">
        <menu>
            <item
                android:id="@+id/formatear"
                android:icon="@mipmap/ic_sd"
                android:title="@string/format"/>
        </menu>
    </item>
    <item android:title="@string/sistema">
        <menu>
            <item android:id="@+id/wifi"
                android:icon="@drawable/ic_wifi_tethering_black"
                android:title="@string/wifi"/>
            <item android:id="@+id/cerrarsesion"
                android:icon="@mipmap/ic_cerrar_sesion"
                android:title="@string/cerrarsesion"/>
            <item android:id="@+id/reiniciar"
                android:icon="@drawable/ic_refresh_black"
                android:title="@string/reiniciar"/>
            <item android:id="@+id/apagar"
                android:icon="@mipmap/ic_apagar"
                android:title="@string/apagar"/>
        </menu>
    </item>
</menu>
